<resources>
    <string name="app_name">LV12</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">LV12</string>
    <string name="nav_header_subtitle">andriy.danylovych@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="dataset_patch_index">%1$s - patch # %2$d</string>
    <string name="dataset_review">Dataset review</string>
    <string name="delete">Delete</string>
    <string name="take_photo">Take Photo</string>
    <string name="photo">Photo</string>
    <string name="get_info">Info</string>

    <string name="height">Height</string>
    <string name="label">Label</string>
    <string name="layers">Layers:</string>
    <string name="label_name">Label name</string>

    <string name="menu_home">Camera</string>
    <string name="menu_review">Review</string>
    <string name="menu_dataset">Datasets</string>
    <string name="menu_setup">Setup</string>

    <string name="next">Next</string>
    <string name="NEW">NEW</string>

    <string name="patch_index">Patch # %1$d</string>

    <string name="pixel">Pixel %1$d</string>
    <string name="prev">Previous</string>

    <string name="resolution">Width x Height:</string>
    <string name="save">Save</string>

    <string name="saved_layer">saved_layer</string>
    <string name="snippet">Snippet</string>
    <string name="snippet_width">snippet_width</string>
    <string name="snippet_height">snippet_height</string>

    <string name="version">Version: 0.1</string>
    <string name="width">Width</string>

    <string name="width_height">WxH = %1$d x %2$d = %3$d</string>

    <string-array name="info_options">
        <item>Camera parameters</item>
        <item>Storage parameters</item>
    </string-array>

    <string-array name="output_size">
        <item>352 x 288</item>
        <item>640 x 480</item>
        <item>800 x 600</item>
    </string-array>

    <string-array name="layers">
        <item>Y</item>
        <item>Y + U</item>
        <item>Y + V</item>
    </string-array>

</resources>