<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.prostologik.lv12.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_review"
        android:name="com.prostologik.lv12.ui.review.ReviewFragment"
        android:label="@string/menu_review"
        tools:layout="@layout/fragment_review" />

    <fragment
        android:id="@+id/nav_dataset"
        android:name="com.prostologik.lv12.ui.dataset.DatasetFragment"
        android:label="@string/menu_dataset"
        tools:layout="@layout/fragment_dataset" />

    <fragment
        android:id="@+id/nav_setup"
        android:name="com.prostologik.lv12.ui.setup.SetupFragment"
        android:label="@string/menu_setup"
        tools:layout="@layout/fragment_setup" />

</navigation>