<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.review.ReviewFragment">

    <com.prostologik.lv12.ui.review.ZoomClass
        android:id="@+id/imageView"
        android:contentDescription="@string/photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-164dp" />

    <ImageView
        android:id="@+id/imageSnippet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="ContentDescription"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_review"
        />

    <TextView
        android:id="@+id/text_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/delete_button"
        android:contentDescription="@string/delete"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/delete_24"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_review"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <ImageButton
        android:id="@+id/save_button"
        android:contentDescription="@string/save"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="#00FF00"
        android:src="@drawable/save_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageButton
        android:id="@+id/next_button"
        android:contentDescription="@string/photo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="#0000FF"
        android:src="@drawable/next_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>