<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dataset.DatasetFragment">

    <Spinner
        android:id="@+id/spinnerPatchSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:gravity="center|center"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/text_dataset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPatchSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />

    <ImageView
        android:id="@+id/imageSnippet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="ContentDescription"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_dataset"
        />

    <com.prostologik.lv12.ui.dataset.OverlayView
        android:id="@+id/overlayview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageSnippet"
        app:layout_constraintEnd_toEndOf="@+id/imageSnippet"
        app:layout_constraintStart_toStartOf="@+id/imageSnippet"
        app:layout_constraintTop_toTopOf="@+id/imageSnippet" />

    <ImageButton
        android:id="@+id/delete_button"
        android:contentDescription="@string/delete"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/delete_24"
        android:layout_margin="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/prev_button"
        />

    <ImageButton
        android:id="@+id/save_button"
        android:contentDescription="@string/save"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/save_24"
        android:layout_margin="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/next_button"
        />

    <ImageButton
        android:id="@+id/prev_button"
        android:contentDescription="@string/save"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#00FF00"
        android:src="@drawable/prev_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageButton
        android:id="@+id/next_button"
        android:contentDescription="@string/photo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#00FF00"
        android:src="@drawable/next_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>